--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -4,12 +4,16 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
-coverage==4.4
+certifi==2017.4.17        # via requests
+chardet==3.0.4            # via requests
+coverage==4.4.1
 flake8==3.3.0
+idna==2.5                 # via requests
 mccabe==0.6.1             # via flake8
-py==1.4.33                # via pytest
+py==1.4.34                # via pytest
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.5.0           # via flake8
 pytest-cov==2.5.1
-pytest==3.0.7
-requests==2.14.2
+pytest==3.1.2
+requests==2.18.1
+urllib3==1.21.1           # via requests
