--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [pytest]
-testpaths = mercury_parser
+testpaths = tests
 addopts = --cov mercury_parser --cov-fail-under 90
 
 [tox]
 envlist = py35, flake8
-skipdist = True
+skipsdist = True
 
 [testenv]
 passenv = *
