--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 .cache
-__pycache__/
-*.egg-info/
-.installed.cfg
-*.egg
-dist/
-.tox/
 .coverage
+dist/
+
+*.DS_Store
+__pycache__/
+
+.pytest_cache/
+.installed.cfg
+build/
+
+*.egg
+*.egg-info/
+*.pyc
+.tox/
