--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: python
 
 python:
+    - "2.7"
     - "3.5"
+    - "3.6"
 
 install:
-  - pip install tox
+  - pip install tox-travis
   - pip install coveralls
 
 script:
