--- a/tox.ini
+++ b/tox.ini
@@ -3,18 +3,23 @@ testpaths = tests
 addopts = --cov mercury_parser --cov-fail-under 90
 
 [tox]
-envlist = py35, flake8
+envlist = py{27,35,36}, flake8
 
 [testenv]
+basepython =
+    py27: python2.7
+    py35: python3.5
+    py36: python3.6
 passenv = *
 deps = -r{toxinidir}/requirements/requirements.txt
+       -r{toxinidir}/requirements/dev-requirements.txt
 commands = pytest
 
 [testenv:flake8]
 deps = flake8
+basepython = python3.6
 commands = flake8 mercury_parser
 
 [flake8]
 max-line-length = 120
-basepython = python3.5
 exclude = .tox
