--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,14 @@ testpaths = tests
 addopts = --cov mercury_parser --cov-fail-under 90
 
 [tox]
-envlist = py{27,35,36}, flake8
+envlist = py{27,35,36,37}, flake8
 
 [testenv]
 basepython =
     py27: python2.7
     py35: python3.5
     py36: python3.6
+    py37: python3.7
 passenv = *
 deps = -r{toxinidir}/requirements/requirements.txt
        -r{toxinidir}/requirements/dev-requirements.txt
@@ -17,7 +18,7 @@ commands = pytest
 
 [testenv:flake8]
 deps = flake8
-basepython = python3.6
+basepython = python3.7
 commands = flake8 mercury_parser
 
 [flake8]
