--- a/tox.ini
+++ b/tox.ini
@@ -3,18 +3,18 @@ testpaths = tests
 addopts = --cov mercury_parser --cov-fail-under 90
 
 [tox]
-envlist = py{27,35,36,37}, flake8
+envlist = black, flake8, py37
+skipdist = True
 
 [testenv]
-basepython =
-    py27: python2.7
-    py35: python3.5
-    py36: python3.6
-    py37: python3.7
 passenv = *
-deps = -r{toxinidir}/requirements/requirements.txt
-       -r{toxinidir}/requirements/dev-requirements.txt
-commands = pytest
+deps = pipenv
+commands =
+    pipenv install --dev --deploy --ignore-pipfile
+    pytest
+
+setenv =
+    PYTHONDONTWRITEBYTECODE=1
 
 [testenv:flake8]
 deps = flake8
@@ -22,5 +22,9 @@ basepython = python3.7
 commands = flake8 mercury_parser
 
 [flake8]
-max-line-length = 120
+max-line-length = 90
 exclude = .tox
+
+[testenv:black]
+deps = black
+commands = black --check mercury_parser
