--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: python
 dist: xenial
-python: "3.7"
-env:
-  - DOCKER_COMPOSE_VERSION=1.24.1
+python: 
+  - "3.8"
+  - "3.9"
+  - "3.10"
+
+services:
+  - docker
+
 before_install:
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-  - docker-compose up -d
+  - docker compose up -d
+
 install:
   - pip install tox
+
 script:
   - tox -r
