--- a/tox.ini
+++ b/tox.ini
@@ -3,26 +3,29 @@ testpaths = tests
 addopts = --cov mercury_parser --cov-fail-under 90
 
 [tox]
-envlist = black, flake8, py37
-skipdist = True
+envlist = py{38,39,310} 
+          black, 
+          flake8
+
+skipsdist = True
 
 [testenv]
 passenv = *
-deps = pipenv
+deps = poetry
 commands =
-    pipenv install --dev --deploy --ignore-pipfile
-    pytest
+    poetry install -vvv
+    poetry run pytest
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
 
 [testenv:flake8]
 deps = flake8
-basepython = python3.7
+basepython = python3.10
 commands = flake8 mercury_parser
 
 [flake8]
-max-line-length = 90
+max-line-length = 120
 exclude = .tox
 
 [testenv:black]
